# make the python rules available
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

# make the dependencies from requirements.txt available
load("@knora_py_deps//:requirements.bzl", "requirement")

py_library(
    name = "excel_to_json_lists",
    srcs = ["excel_to_json_lists.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jsonschema"),
        requirement("openpyxl"),
    ],
)

py_library(
    name = "excel_to_json_resources",
    srcs = ["excel_to_json_resources.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jsonschema"),
        requirement("openpyxl"),
    ],
)

py_library(
    name = "excel_to_json_properties",
    srcs = ["excel_to_json_properties.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("jsonschema"),
        requirement("openpyxl"),
    ],
)

py_library(
    name = "expand_all_lists",
    srcs = ["expand_all_lists.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//knora/dsplib/utils:excel_to_json_lists",
    ],
)

py_library(
    name = "onto_create_lists",
    srcs = ["onto_create_lists.py"],
    imports = [
        ".",
        "..",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":expand_all_lists",
        ":onto_validate",
        "//knora/dsplib/models:connection",
        "//knora/dsplib/models:listnode",
        "//knora/dsplib/models:project",
    ],
)

py_library(
    name = "onto_create_ontology",
    srcs = ["onto_create_ontology.py"],
    imports = [
        ".",
        "..",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":expand_all_lists",
        ":onto_create_lists",
        ":onto_validate",
        "//knora/dsplib/models:connection",
        "//knora/dsplib/models:group",
        "//knora/dsplib/models:helpers",
        "//knora/dsplib/models:langstring",
        "//knora/dsplib/models:ontology",
        "//knora/dsplib/models:project",
        "//knora/dsplib/models:propertyclass",
        "//knora/dsplib/models:resourceclass",
        "//knora/dsplib/models:user",
    ],
)

py_library(
    name = "onto_get",
    srcs = ["onto_get.py"],
    imports = [
        ".",
        "..",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//knora/dsplib/models:connection",
        "//knora/dsplib/models:listnode",
        "//knora/dsplib/models:ontology",
        "//knora/dsplib/models:project",
    ],
)

py_library(
    name = "onto_validate",
    srcs = ["onto_validate.py"],
    imports = [
        ".",
        "..",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":expand_all_lists",
        requirement("jsonschema"),
    ],
)

py_library(
    name = "onto_visualize",
    srcs = ["onto_visualize.py"],
    imports = [
        ".",
        "..",
    ],
    visibility = ["//visibility:public"],
    deps = [
    ],
)

py_library(
    name = "set_encoder",
    srcs = ["set_encoder.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "xml_upload",
    srcs = ["xml_upload.py"],
    imports = [
        ".",
        "..",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//knora/dsplib/models:connection",
        "//knora/dsplib/models:group",
        "//knora/dsplib/models:permission",
        "//knora/dsplib/models:project",
        "//knora/dsplib/models:resource",
        "//knora/dsplib/models:sipi",
        requirement("lxml"),
    ],
)

py_library(
    name = "id_to_iri",
    srcs = ["id_to_iri.py"],
    visibility = ["//visibility:public"],
    deps = [
        requirement("lxml"),
    ],
)
